--- a/src/assets/custom.css
+++ b/src/assets/custom.css
@@ -61,6 +61,11 @@ body{
     border-color: #04b6a1;
 }
 
+.ant-table .ant-btn{
+    margin-bottom: 6px;
+    display: block;
+}
+
 @media only screen and (min-width: 1200px){
     .ui.container{
         width: 95%;
